dataset/local/tf_ecs_exec_logging/resource.yaml
apiVersion: terraform.io/v1
kind: Plan
metadata:
  name: good-plan
terraform_version: "1.8.4"
planned_values:
  root_module:
    resources:
      - type: aws_ecs_cluster
        values:
          configuration:
            - execute_command_configuration:
                - logging: "OVERRIDE"
---
apiVersion: terraform.io/v1
kind: Plan
metadata:
  name: bad-plan
terraform_version: "1.8.4"
planned_values:
  root_module:
    resources:
      - type: aws_ecs_cluster
        values:
          configuration:
            - execute_command_configuration:
                - logging: "NONE"
